--- a/index.html
+++ b/index.html
@@ -199,8 +199,14 @@
                             <span class="tech-tag">Java</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i> View Code</a>
-                        </div>
+  <a href="https://github.com/Deepakgunasekaran07/StudentManagement" 
+     class="project-link" 
+     target="_blank" 
+     rel="noopener noreferrer">
+    <i class="fab fa-github"></i> View Code
+  </a>
+</div>
+
                     </div>
                 </div>
                 <div class="project-card">
