Updated portfolio: fixed profile photo, LinkedIn, email, and GitHub links

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="timeline-content">
                         <h3>Bachelor of Engineering - Computer Science</h3>
                         <h4>KCG College of Technology</h4>
-                        <p class="timeline-period">2022 - 2026 (Expected)</p>
+                        <p class="timeline-period">2022 - 2026 </p>
                         <p class="timeline-grade">CGPA: 7.63</p>
                     </div>
                 </div>
