--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <span>Abinaya G</span>
+                <span>Anushri S</span>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
